--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
     "tsparticles": "^1.35.0",
