--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-particles-js": "^3.5.3",
+    "react-popupbox": "^2.0.8",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
+    "reactjs-popup": "^2.0.5",
     "tsparticles": "^1.35.0",
     "web-vitals": "^1.1.2"
   },
